v0.4.3 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Key Changes:

 ~ Shields now reduce damage, and all new shield & armor content

 ~ Many fixes and improvements to the AI
 
 ~ Detailed combat log display
 
 ~ Numerous GUI tweaks and improvements
 
 ~ Galaxy Generation is now based on a copy-able random seed

 ~ New clouds and nebulae on empty systems and moving around the galaxy.
 

New Features / Improvements:
 ~ Fundamental change to ship shield mechanics: ship shields reduce the amount of damage suffered from a hit by a fixed value (determined by the shield strength stat), instead of providing additional structure that regenerates between battles
 ~ Reworked supply block / fleet movement blockade mechanics
 ~ ~ Supply blocks and fleet movement blockades have been harmonized to occur in the same situations 
 ~ ~ Non-stationary ships no longer create blockades / supply-blocks
 ~ ~ Armed aggressive fleets arriving in a system and then remaining stationary will maintain any supply flow for their empire, and block it against enemies not already having armed aggressive fleets present.
 ~ ~ If armed aggressive fleets for two enemy empires arrive at a system at the same time, supply maintenance takes precedence over supply blocks -- they will each maintain supply for for their empire, and not block supply for the other, for so long as both sides remain and survive.
 ~ ~ An empire 'secures' use of a starlane as an exit from a system simply by having a fleet enter that system along that starlane.  If no armed aggressive enemies were already present in the system, then passage through all exiting starlanes is secured for that empire so long as it maintains an armed aggressive fleet presence in that system.